fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   font-family: "Work Sans", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .sliding-show {
   animation: 23s infinite linear slideLeft;
 }
